<resources>
    <string name="app_name">比鼬</string>

    <string name="title_activity_choose">传文件</string>
    <string name="title_activity_choose_file">传文件</string>
    <string name="title_activity_choose_image">传图片</string>
    <string name="title_activity_choose_video">传视频</string>
    <string name="title_activity_choose_music">传音乐</string>
    <string name="title_activity_choose_document">传文档</string>
    <string name="title_activity_choose_apk">传应用</string>
    <string name="title_activity_choose_archive">传压缩包</string>

    <string name="title_activity_history">传输历史</string>
    <string name="title_activity_connect_computer">连接电脑</string>
    <string name="title_activity_qrcode_scan">扫描二维码</string>
    <string name="title_activity_connect_receiver">发送文件</string>
    <string name="title_activity_connect_sender">接收文件</string>

    <string name="title_activity_connect_">网页传</string>
    <string name="title_activity_receive">正在接收</string>
    <string name="title_activity_send">正在发送</string>
    <string name="title_activity_download">正在下载</string>
    <string name="title_activity_upload">正在上传</string>
    <string name="title_activity_file_move">选择文件夹</string>
    <string name="title_activity_share">比鼬文件快传</string>
    <string name="title_activity_help">使用帮助</string>


    <string name="title_chosen_file_count">已选择%d项</string>
    <string name="title_transfer_connecting">正在连接</string>
    <string name="title_transfer_waiting">正在等待</string>
    <string name="title_transfer_working">正在传输</string>
    <string name="title_file_rename">重命名</string>
    <string name="title_share_file_to">分享文件到</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_history">历史</string>
    <string name="action_select_all">全选</string>
    <string name="action_choosing_dismiss">清除选择</string>
    <string name="action_delete">删除</string>
    <string name="action_help">帮助</string>
    <string name="action_share">分享</string>

    <string name="action_sort">排序方式</string>
    <string name="action_sort_by_folder">按文件夹</string>
    <string name="action_sort_by_type">按文件类型</string>

    <string name="cate_image">图片</string>
    <string name="cate_music">音乐</string>
    <string name="cate_video">视频</string>
    <string name="cate_document">文档</string>
    <string name="cate_archive">压缩包</string>
    <string name="cate_apk">应用</string>
    <string name="cate_download">下载</string>
    <string name="cate_trash">回收站</string>
    <string name="cate_storage">内部储存</string>
    <string name="cate_sdcard">外部储存</string>
    <string name="cate_recent_downloads">最近下载</string>

    <string name="fbtn_receive">接收文件从</string>
    <string name="fbtn_send">发送文件到</string>
    <string name="fbtn_android">安卓</string>
    <string name="fbtn_computer">电脑</string>
    <string name="fbtn_ios">苹果</string>


    <string name="file_option_open">打开</string>
    <string name="file_option_rename">重命名</string>
    <string name="file_option_copy">复制</string>
    <string name="file_option_move">移动</string>
    <string name="file_option_delete">删除</string>
    <string name="file_option_info">详情</string>


    <string name="header_apk_normal">已安装</string>
    <string name="header_apk_system">系统应用</string>
    <string name="header_apk_standalone">未安装</string>
    <string name="header_transfer_working">正在传输</string>
    <string name="header_transfer_waiting">正在等待</string>
    <string name="header_transfer_finished">已完成</string>
    <string name="header_transfer_failed">传输失败</string>
    <string name="header_folder">文件夹</string>
    <string name="header_file">文件</string>


    <string name="hint_choose_file_required">请先选择文件</string>
    <string name="hint_choose_dir_required">请先选择文件夹</string>

    <string name="hint_file_delete_dismissed">删除已取消</string>
    <string name="hint_file_delete_failed">删除失败，请用系统文件管理器删除</string>
    <string name="hint_file_delete_succeeded">删除成功</string>
    <string name="hint_file_delete_confirm">您确认要删除选中的文件吗</string>
    <string name="hint_file_delete_partly_succeeded">部分文件无法删除，请用系统文件管理器删除</string>

    <string name="hitn_file_rename_succeeded">重命名成功</string>
    <string name="hitn_file_rename_failed">重命名失败，请用系统文件管理器操作</string>

    <string name="hint_file_move_running">正在移动</string>
    <string name="hint_file_move_succeeded">已成功移动文件</string>
    <string name="hint_file_move_failed">移动失败，请用系统文件管理器操作</string>

    <string name="hint_file_copy_running">正在复制</string>
    <string name="hint_file_copy_succeeded">已成功复制文件</string>
    <string name="hint_file_copy_failed">复制失败，请用系统文件管理器操作</string>

    <string name="hint_file_exists_folder">操作失败，文件夹已存在</string>
    <string name="hint_file_exists_file">操作失败，文件已存在</string>

    <string name="hint_file_operation_canceled">操作已取消</string>
    <string name="hint_file_operation_background_running">正在后台执行操作</string>
    <string name="hint_file_operation_background_run">后台运行</string>

    <string name="hint_file_none">无任何文件</string>

    <string name="hint_apk_delete_confirm">是否删除此应用程序安装文件</string>
    <string name="hint_apk_delete_failed">未知错误，卸载失败</string>
    <string name="hint_apk_delete_dismissed">卸载已取消</string>
    <string name="hint_apk_delete_succeeded">卸载成功</string>

    <string name="hint_share_no_file_sendable">没有可传输的文件对象</string>
    <string name="hint_transfer_abort_confirm">确认终止任务</string>


    <string name="tab_received">已接收</string>
    <string name="tab_sent">已发送</string>

    <string name="list_share_android">发送给安卓</string>
    <string name="list_share_computer">发送给电脑</string>
    <string name="list_share_apple">发送给IPhone</string>

    <string name="hint_connect_aborted">传输已取消</string>

    <string name="hint_connect_ap_opening">正在开启WIFI热点</string>
    <string name="hint_connect_ap_opened">WIFI热点已开启,等待对方连接</string>
    <string name="hint_connect_ap_create_failed">开启Wifi热点失败，请换用其它方式接收文件</string>
    <string name="hint_connect_ap_create_succeeded">已成功开启Wifi热点</string>

    <string name="hint_connect_mobile_disabled">为保护流量，已暂时关闭数据网络</string>
    <string name="hint_connect_mobile_close_manually">请手动关闭数据流量</string>

    <string name="hint_connect_wifi_conn_manually">等待手动连接WIFI-\"bbbbiu.com\"</string>
    <string name="hint_connect_sending_manifest">连接成功，正在发送文件清单</string>
    <string name="hint_connect_scanning_wifi">正在扫描WIFI列表</string>
    <string name="hint_connect_waiting_upload">正在等待对方上传文件到服务器</string>

    <string name="hint_connect_server_error">无法连接服务器，请稍后再试</string>
    <string name="hint_connect_device_offline">无法连接互联网，请检查网络设置</string>

    <string name="dialog_wifi_manually_title">连接WIFI</string>
    <string name="dialog_wifi_manually_message">未检测到对方WIFI热点，请手动连接WIFI-\"bbbbiu.com\"</string>

    <string name="dialog_manifest_resend_title">重试发送</string>
    <string name="dialog_manifest_resend_message">发送文件清单失败，是否重新发送清单？</string>

    <string name="dialog_vpn_title">关闭VPN连接</string>
    <string name="dialog_vpn_message">检测到您已连接VPN，使用VPN可能会导致传输失败，请先关闭VPN</string>
    <string name="dialog_vpn_button_close">去关闭</string>
    <string name="dialog_vpn_button_ignore">忽略</string>

    <string name="dialog_offline_title">打开网络连接</string>
    <string name="dialog_offline_message">您的手机处于断网状态，请先打开网络连接，然后进行文件传输</string>

    <string name="connpc_method_local">局域网传输</string>
    <string name="connpc_method_ap">手机热点传输</string>
    <string name="connpc_method_web">互联网传输</string>

    <string name="connpc_reason_local">将手机与电脑连接到同一路由器</string>
    <string name="connpc_reason_ap">手机开启WIFI热点供电脑连接</string>
    <string name="connpc_reason_web">电脑与手机使用互联网传输</string>

    <string name="connpc_button_ap">开启热点</string>
    <string name="connpc_button_local">开始传输</string>
    <string name="connpc_button_web">开始连接</string>

    <string name="permission_go_request">去允许</string>
    <string name="permission_go_settings">去设置</string>
    <string name="permission_dialog_title">请求权限</string>
    <string name="permission_request_storage">需要获得管理存储空间权限以传递文件，请允许</string>
    <string name="permission_request_storage_denied">未取得管理存储空间权限，无法发送文件，请在权限设置中打开权限：“存储空间”</string>
    <string name="permission_request_camera">需要相机权限以扫描二维码，请允许</string>
    <string name="permission_request_camera_denied">未取得相机权限，无法扫描二维码，请在权限设置中打开权限：“相机”</string>
    <string name="permission_request_necessary">需要“电话”权限，用来获取手机信息以识别用户；需要“存储空间”权限用来读取文件以传递文件。请允许</string>
    <string name="permission_request_necessary_denied">未取得所需权限，应用无法正常使用，请在权限设置中打开权限：“存储空间”，“电话”</string>
</resources>
