<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/action_sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_by_folder"
                android:title="@string/action_sort_by_folder" />
            <item
                android:id="@+id/action_sort_by_type"
                android:title="@string/action_sort_by_type" />
        </menu>

    </item>

    <item
        android:id="@+id/action_choosing_dismiss"
        android:title="@string/action_choosing_dismiss"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_choose_all"
        android:title="@string/action_select_all"
        app:showAsAction="never" />
</menu>