<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_choosing_dismiss"
        android:title="@string/action_choosing_dismiss"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_choose_all"
        android:title="@string/action_select_all"
        app:showAsAction="never" />
</menu>