<?xml version="1.0" encoding="utf-8"?>

<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoOverlay="true"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="8dp">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout_file_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_file_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_file_choosing"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/float_action_menu_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:menu_labels_colorNormal="@color/fbtn_label"
            app:menu_labels_colorPressed="@color/fbtn_label"
            app:menu_labels_colorRipple="@color/fbtn_label"
            fab:menu_backgroundColor="@color/fbtn_shadow"
            fab:menu_colorNormal="@color/fbtn"
            fab:menu_colorPressed="@color/fbtn"
            fab:menu_colorRipple="@color/fbtn"
            fab:menu_fab_label="@string/fbtn_send"
            fab:menu_icon="@drawable/ic_send"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"
            fab:menu_labels_textColor="@color/fbtn_label_text">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fbtn_send_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_send_android"
                app:fab_colorNormal="@color/fbtn_sub"
                app:fab_colorPressed="@color/fbtn_sub"
                app:fab_colorRipple="@color/fbtn_sub"
                app:fab_label="@string/fbtn_android"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fbtn_send_ios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_send_ios"
                app:fab_colorNormal="@color/fbtn_sub"
                app:fab_colorPressed="@color/fbtn_sub"
                app:fab_colorRipple="@color/fbtn_sub"
                app:fab_label="@string/fbtn_ios"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fbtn_send_computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_send_computer"
                app:fab_colorNormal="@color/fbtn_sub"
                app:fab_colorPressed="@color/fbtn_sub"
                app:fab_colorRipple="@color/fbtn_sub"
                app:fab_label="@string/fbtn_computer"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_file_option"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/upPanel" />
</com.sothree.slidinguppanel.SlidingUpPanelLayout>